ping-pong-app/manifests/deployment.yaml
# Deployment Log-output
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: junior246/log_output
          volumeMounts:
              - name: log-output-config
                mountPath: /config
                readOnly: true
      volumes:
        - name: log-output-config
          configMap:
            name: log-output-config
            items:
              - key: "information.txt"
                path: "information.txt"
---

# Deployment Ping-Pong
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong-app
          image: junior246/ping_pong_app
          volumeMounts:
            - name: properties-config
              mountPath: "/config"
              readOnly: true
      volumes:
        - name: properties-config
          configMap:
            name: log-output-config
            items:
              - key: application.properties
                path: application.properties
