ping-pong-app/manifests/service.yaml
# Service Ping-Pong
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: ping-pong-svc
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 2348
      targetPort: 8080

---
# Service Log-Output
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: log-output-svc
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 2346
      targetPort: 8081
